added score to players

--- a/Dice_Game/index.html
+++ b/Dice_Game/index.html
@@ -38,6 +38,7 @@
         </div>
         <div class="player2">
             <h2>Player 2</h2>
+            <div>0</div>
         </div>
     </main>
 </body>
