--- a/Dice_Game/index.html
+++ b/Dice_Game/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div class="player1">
+        <div class="player1 card">
             <h2>Player 1</h2>
             <div>0</div>
         </div>
@@ -32,11 +32,11 @@
                     <img alt="dice-2.png" src="https://github.com/morMBen/Dice_Game_Starter/blob/main/dice-6.png?raw=true"/>    
                 </div>
             </div>
-            <div class="roundedScore">0</div>
+            <p>Rounded Score: <span class="roundedScore"> 0</span></p>
             <button class="roll-btn">Roll dices</button>
             <button class="hold-btn">Hold</button>
         </div>
-        <div class="player2">
+        <div class="player2 card">
             <h2>Player 2</h2>
             <div>0</div>
         </div>
